--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  @font-face {
+font-family: 'Open Sans', sans-serif;
+  font-style: normal;
+    src: url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+  }
+    
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+a {
+
+  text-decoration: none;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
